export type EstadoParticipacion = 'PENDIENTE' | 'CONFIRMADO' | 'RECHAZADO' | 'CANCELADO';
